add_executable(threesum threesum.cpp)
add_executable(movezero movezero.cpp)
add_executable(pallindrome pallindrome.cpp)
add_executable(removeDuplicates removeDuplicates.cpp)
add_executable(sqSortedArray sqSortedArray.cpp)
add_executable(twoSum2 twoSum2.cpp)
add_executable(mostWater mostWater.cpp)

include_directories(
    ${CMAKE_SOURCE_DIR}/include
)
