add_executable(containsDuplicate containsDuplicate.cpp)
add_executable(groupAnagram groupAnagram.cpp)
add_executable(kFrequent kFrequent.cpp)
add_executable(parray product_array.cpp)
add_executable(sudoku sudoku.cpp)
add_executable(lcs lcs.cpp)
add_executable(stairs climbstairs.cpp)





include_directories(
    ${CMAKE_SOURCE_DIR}/include
)
