

add_executable(max_profit max_profit.cpp)
add_executable(longest_ss longest_substring.cpp)

#add_executable(merge merge.cpp)
# target_link_libraries(project ${PYTHON_LIBRARIES})

include_directories(${CMAKE_SOURCE_DIR}/include)



# include("${scratch_CMAKE_DIR}/matplotlib_cppTargets.cmake")

# get_target_property(scratch_INCLUDE_DIRS matplotlib_cpp::matplotlib_cpp INTERFACE_INCLUDE_DIRECTORIES)